added a red highlight when memory exceeds 50%

--- a/.xmobarrc
+++ b/.xmobarrc
@@ -4,7 +4,7 @@ Config { font = "xft:DejaVu Sans Mono-9",
          position = Top,
          lowerOnStart = True,
          commands = [ Run MultiCpu ["-t", "Cpu : <total0>% <total1>% <total2>% <total3>% (Total: <total>%)", "-L", "0", "-H", "50", "-n", "#60dc80" ,"-h", "#ec7373"] 10,
-                      Run Memory ["-t", "Mem: <usedratio>%"] 10,
+                      Run Memory ["-t", "Mem: <usedratio>%", "-H", "50", "-h", "#ec7373"] 10,
                       Run Date "%a %b %d %Y %H:%M:%S" "date" 10,
 		      Run Weather "EGBJ" ["-t"," <tempC>°C <skyCondition>","-L","10","-H","22","-n","#60dc80","-h","#ec7373"] 18000,
                       Run StdinReader
